--- a/package.json
+++ b/package.json
@@ -9,28 +9,33 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "test": "vitest --config ./vitest.config.js",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+    "lint:js": "eslint --ext \".ts,.vue,.js\" --ignore-path .eslintignore .",
+    "lint:prettier": "prettier --check .",
+    "lint": "npm run lint:js && npm run lint:prettier",
+    "lintfix": "prettier --write . && npm run lint:js --fix"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxt/test-utils": "^3.7.4",
+    "@nuxtjs/eslint-config-typescript": "^12.1.0",
+    "@typescript-eslint/parser": "^6.7.3",
     "@vitejs/plugin-vue": "^4.3.4",
     "@vue/test-utils": "^2.4.1",
     "autoprefixer": "^10.4.16",
     "chai": "^4.3.9",
+    "eslint": "^8.50.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "jsdom": "^22.1.0",
     "nuxt": "^3.7.4",
     "postcss": "^8.4.30",
+    "prettier": "^3.0.3",
     "tailwindcss": "^3.3.3",
+    "typescript": "^5.2.2",
     "vitest": "^0.33.0"
   },
   "dependencies": {
-    "@nuxtjs/eslint-config-typescript": "^12.1.0",
-    "@typescript-eslint/parser": "^6.7.3",
-    "eslint": "^8.50.0",
-    "mysql2": "^3.6.1",
-    "prettier": "^3.0.3",
-    "typescript": "^5.2.2"
+    "mysql2": "^3.6.1"
   },
   "overrides": {
     "vue": "latest"
